--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+
+## Project files ###
+config.json
